--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.23.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
-    "sort-by": "^1.2.0"
+    "redux-thunk": "^2.4.2",
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.12",
+    "swiper": "^10.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
