--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.8",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.12",
     "swiper": "^10.0.3"
