--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.33.0",
     "bootstrap": "^5.3.0",
     "firebase": "^9.23.0",
     "localforage": "^1.10.0",
